--- a/Accounting/Accounting.DataLayer/Accounting.DataLayer.csproj
+++ b/Accounting/Accounting.DataLayer/Accounting.DataLayer.csproj
@@ -75,6 +75,9 @@
     <Compile Include="customers.cs">
       <DependentUpon>AccountingModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="LogIn.cs">
+      <DependentUpon>AccountingModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ICustomerRepository.cs" />
     <Compile Include="Services\CustomerRepository.cs" />
